--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ display: block;
 <p class="text-3xl font-bold text-red-600 font-['NanumSquareNeo'] font-black">AI 수능 기초 과정</p>
 <p class="text-2xl font-bold text-red-600 font-['NanumSquareNeo'] font-black">(7기 예비반)</p>
 </div>
-<form id="enrollmentForm" class="space-y-8">
+<form id="enrollmentForm" name="contact" method="POST" data-netlify="true" class="space-y-8">
 <div class="space-y-4">
 <label class="text-lg font-medium text-gray-900">수강료 선택</label>
 <div class="grid gap-4">
@@ -101,15 +101,15 @@ display: block;
 <div class="space-y-6">
 <div>
 <label class="block text-xl font-medium text-gray-700">이름 <span class="text-red-500">*</span></label>
-<input type="text" required class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="홍길동">
+<input type="text" name="name" required class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="홍길동">
 </div>
 <div>
 <label class="block text-xl font-medium text-gray-700">전화번호 <span class="text-red-500">*</span></label>
-<input type="tel" required pattern="[0-9]{3}[0-9]{4}[0-9]{4}" class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="01012345678">
+<input type="tel" name="phone" required pattern="[0-9]{3}[0-9]{4}[0-9]{4}" class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="01012345678">
 </div>
 <div>
 <label class="block text-xl font-medium text-gray-700">이메일 <span class="text-red-500">*</span></label>
-<input type="email" required class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="example@email.com">
+<input type="email" name="email" required class="mt-1 block w-full rounded-button border-gray-300 shadow-sm focus:border-primary focus:ring-primary sm:text-sm" placeholder="example@email.com">
 </div>
 </div>
 <div class="flex items-start">
@@ -193,5 +193,5 @@ e.preventDefault();
 document.getElementById('successModal').classList.remove('hidden');
 });
 </script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91e78e59ae9fb09f',t:'MTc0MTY1OTQ1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
