--- a/contact.html
+++ b/contact.html
@@ -176,22 +176,40 @@ display: block;
 </div>
 <script>
 document.getElementById('privacyButton').addEventListener('click', () => {
-document.getElementById('privacyModal').classList.remove('hidden');
+  document.getElementById('privacyModal').classList.remove('hidden');
 });
 document.getElementById('closePrivacyModal').addEventListener('click', () => {
-document.getElementById('privacyModal').classList.add('hidden');
+  document.getElementById('privacyModal').classList.add('hidden');
 });
 document.getElementById('confirmPrivacy').addEventListener('click', () => {
-document.getElementById('privacyModal').classList.add('hidden');
-document.getElementById('privacy').checked = true;
+  document.getElementById('privacyModal').classList.add('hidden');
+  document.getElementById('privacy').checked = true;
 });
 document.getElementById('closeSuccessModal').addEventListener('click', () => {
-document.getElementById('successModal').classList.add('hidden');
+  document.getElementById('successModal').classList.add('hidden');
 });
-document.getElementById('enrollmentForm').addEventListener('submit', (e) => {
-e.preventDefault();
-document.getElementById('successModal').classList.remove('hidden');
+document.getElementById('enrollmentForm').addEventListener('submit', function(e) {
+  e.preventDefault(); // 기본 제출 막기 (일단 유지)
+  const form = this;
+  const formData = new FormData(form);
+
+  fetch('/', {
+    method: 'POST',
+    body: formData
+  })
+  .then(response => {
+    if (response.ok) {
+      document.getElementById('successModal').classList.remove('hidden'); // 성공 시 모달 띄우기
+      form.reset(); // 폼 초기화
+    } else {
+      alert('제출에 실패했어요. 다시 시도해주세요!');
+    }
+  })
+  .catch(error => {
+    console.error('에러:', error);
+    alert('문제가 생겼어요. 다시 시도해주세요!');
+  });
 });
 </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91e78e59ae9fb09f',t:'MTc0MTY1OTQ1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91e78e59ae9fb09f',t:'MTc0MTY1OTQ1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('script');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
