--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@ document.addEventListener('DOMContentLoaded', function() {
     };
 
     // 웹훅으로 데이터 전송
-    fetch('[YOUR_WEBAPP_URL]', {
+    fetch('https://script.google.com/macros/s/AKfycbxnMF6QnFXQ7un6CpvbcHY6DePNLsrxXG2-1ppw86qPyAbHEHE_5fIMKUPNh--bMVSXxA/exec', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
