--- a/contact.html
+++ b/contact.html
@@ -202,34 +202,35 @@ document.addEventListener('DOMContentLoaded', function() {
       return; // 제출 중단
     }
 
-    // 폼 데이터를 JSON 객체로 변환
-    const data = {
-      name: formData.get('name'),
-      phone: formData.get('phone'),
-      email: formData.get('email'),
-      price: formData.get('price'),
-      privacy: formData.get('privacy') ? "동의" : "미동의" // 체크박스 상태에 따라 값 설정
-    };
+    // 폼 데이터를 URL-encoded 형식으로 변환
+    const params = new URLSearchParams();
+    for (let [key, value] of formData.entries()) {
+      params.append(key, value);
+    }
 
     // 웹훅으로 데이터 전송
-    fetch('https://script.google.com/macros/s/AKfycbxnMF6QnFXQ7un6CpvbcHY6DePNLsrxXG2-1ppw86qPyAbHEHE_5fIMKUPNh--bMVSXxA/exec', {
+    fetch('https://script.google.com/macros/s/AKfycbwytV7lZWyWOoWEsqhWcJPefgKHgqas90VZtvXzONAIB6N-JYOWAr-HQIUYM3ucdD92Rg/exec', {
       method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: params.toString()
     })
     .then(response => {
-      console.log('응답 상태:', response.status); // 디버깅용 로그
-      if (response.ok) {
+      if (!response.ok) throw new Error('네트워크 응답 오류');
+      return response.json(); // 응답을 JSON으로 파싱
+    })
+    .then(data => {
+      console.log('응답 데이터:', data); // 디버깅용 로그
+      if (data.result === 'success') {
         console.log('웹훅 전송 성공!');
         document.getElementById('successModal').classList.remove('hidden'); // 성공 모달 띄우기
         form.reset(); // 폼 초기화
       } else {
-        console.error('웹훅 전송 실패:', response.status);
+        console.error('웹훅 오류:', data.error);
         alert('데이터 전송에 실패했어요. 다시 시도해주세요!');
       }
     })
     .catch(error => {
-      console.error('에러 발생:', error);
+      console.error('에러 발생:', error.message);
       alert('문제가 생겼어요. 다시 시도해주세요!');
     });
   });
