--- a/contact.html
+++ b/contact.html
@@ -209,17 +209,24 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     // 웹훅으로 데이터 전송
-    fetch('https://script.google.com/macros/s/AKfycbwytV7lZWyWOoWEsqhWcJPefgKHgqas90VZtvXzONAIB6N-JYOWAr-HQIUYM3ucdD92Rg/exec', {
+    fetch('https://script.google.com/macros/s/AKfycbwDvxknc0jl6u4GtWgRrGBDnNcFuzefY2faS1oucyeTAep5BA5t4YgcIaI4rrHsUfeuOg/exec', {
       method: 'POST',
       headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
       body: params.toString()
     })
     .then(response => {
-      if (!response.ok) throw new Error('네트워크 응답 오류');
-      return response.json(); // 응답을 JSON으로 파싱
+      if (!response.ok) throw new Error(`HTTP 오류: ${response.status}`);
+      return response.text(); // 먼저 텍스트로 받아서 디버깅
     })
-    .then(data => {
-      console.log('응답 데이터:', data); // 디버깅용 로그
+    .then(text => {
+      console.log('원시 응답:', text); // 응답을 텍스트로 출력
+      let data;
+      try {
+        data = JSON.parse(text); // JSON 파싱 시도
+      } catch (error) {
+        console.error('JSON 파싱 오류:', error);
+        throw new Error('응답이 JSON 형식이 아닙니다.');
+      }
       if (data.result === 'success') {
         console.log('웹훅 전송 성공!');
         document.getElementById('successModal').classList.remove('hidden'); // 성공 모달 띄우기
