--- a/contact.html
+++ b/contact.html
@@ -194,10 +194,12 @@ document.addEventListener('DOMContentLoaded', function() {
     const form = this;
     const formData = new FormData(form);
 
-    // 수강료 선택 확인
+    // 수강료 선택 확인 (디버깅 강화)
+    const priceInputs = form.querySelectorAll('input[name="price"]:checked');
     const priceSelected = formData.get('price');
-    console.log('priceSelected 값:', priceSelected); // 디버깅용 로그
-    if (!priceSelected) {
+    console.log('priceInputs 길이:', priceInputs.length);
+    console.log('priceSelected 값:', priceSelected);
+    if (!priceSelected || priceInputs.length === 0) {
       alert('수강료를 선택해주세요!');
       return; // 제출 중단
     }
@@ -209,7 +211,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     // 웹훅으로 데이터 전송
-    fetch('https://script.google.com/macros/s/AKfycbwDvxknc0jl6u4GtWgRrGBDnNcFuzefY2faS1oucyeTAep5BA5t4YgcIaI4rrHsUfeuOg/exec', {
+    fetch('https://script.google.com/macros/s/AKfycbxKdf5IjmH_ALNCehapY2w84TCvIWkLDP6JDc8B2EJqPJ9Omghb4JL0SG5Na1xsyb1TMQ/exec', {
       method: 'POST',
       headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
       body: params.toString()
